<?xml version="1.0"?>
<package format="2">

  <name>flock_msgs</name>
  <version>0.1.0</version>
  <description>Flock messages</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/clydemcqueen/flock.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/flock/issues</url>

  <author>Clyde McQueen</author>
  <author>Peter Mullen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

</package>